[package]
name = "core"
version = "0.1.0"
authors = ["chris <chris@aion.network>"]

[dependencies]
#p2p = { git = "https://github.com/cybercoder2009/p2p" }
serde_json = "1.0"
p2p = { path = "../../p2p" }
ws = { git = "https://github.com/housleyjk/ws-rs.git" }
uuid = { version = "0.7", features = ["v4"] }
ctrlc = { version = "3.0", features = ["termination"] }